# ACEest-Fitness

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  app.py  config.py  cookies.txt  crumb.txt  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: main.yml
app/: __init__.py  data.py  routes.py
docs/reports/: TEST_REPORT.md
infrastructure/jenkins/: Dockerfile.jenkins  cookies.txt  crumb.txt  docker-compose.yml  init.groovy
infrastructure/jenkins/jenkins_home/: jenkins.telemetry.Correlator.xml  secret.key
infrastructure/jenkins/jenkins_home/.java/fonts/21.0.9/: fcinfo-1-6a6540303f63-debian-13-en-.properties
infrastructure/jenkins/jenkins_home/secrets/: hudson.model.User.DIRNAMES  initialAdminPassword  jenkins.model.Jenkins.crumbSalt  master.key
infrastructure/jenkins/jenkins_home/updates/: default.json
infrastructure/jenkins/jenkins_home/users/admin_c3a11415c4ff614f8b870459072757cce6d8619f2f0b64f0c94096087d44e756/: config.xml
scripts/: deploy.sh  setup-hooks.sh
src/aceest/: __init__.py  data.py  db.py  routes.py
tests/: conftest.py  test_app.py
